3.0.0 TODO
- db navigator movements (wait for jQuery UI 1.5)

2.99.8
- some minor changes were done after strict validation checks

2.99.7
- a bug with disabled P4A_Field::getAsCheckbox() was solved
- P4A_Field::getAsRadio()'s CSS was modified a bit
- P4A_Fieldset's legend is now auto translated on getAsString()
- P4A_Menu's items are now auto translated on getAsString()
- P4A_Mask's title is now auto translated on getAsString()
- P4A_Table's headers names are now auto translated on getAsString()
- P4A_Mask's title is now automatically generated using ucfirst() function instead of ucwords()
- P4A_I18N::mergeTranslation() method was added
- products catalogue sample application was changed for simplicity (SQL structure also)
- products catalogue sample application multilanguage support was added
- P4A:I18N::format() and normalize() methods now have a new parameter that allows coder to control
  if the method should throw an exception or now (default is true)
- P4A_Fields now turns off the exception throwing parameter when calling P4A:I18N::format() or
  P4A:I18N::normalize(), to avoid application break due to a wrong input

2.99.6
- a bug with P4A_Navigation_Bar was solved
- P4A_Fieldset's CSS was changed a bit so it should have the exact width set by setWidth
- "disabled" property was removed from P4A_Button's HTML 'cause it caused a rendering bug with floats
- some minor CSS modifications were done
- a bug on Internet Explorer 6 and sidebars was solved
- jQuery::iFixPNG was updated to 2.0
- "folder" and "folder_open" icons were also added in the GIF format (due the ie bug and our usage in list-style-image)
- P4A_DB_Navigator's CSS was reworked for browser compatibility
- a bug with PostgreSQL and automatic sequence name creation was fixed
- P4A_Thumbnail_Generator::isMimeTypeSupported() method was added
- P4A_Field::getAsFile() method now calls P4A_Thumbnail_Generator::isMimeTypeSupported() before rendering the image preview